@@ -582,3 +582,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20071203 szx.c: also check if a +D custom ROM is supplied but not specified and
          make sure all variables passed to the +D custom ROM zlib decompression
          are initialised (Fred).
+20071205 accessor.pl,snap_accessors.txt,snapshot.c,szx.c,z80.c: add support for
+         Interface 1 in z80 and szx snapshots (Fred).
