@@ -2385,3 +2385,4 @@
 20071205 menu.c,menu_data.dat,settings.pl: allow the Beta 128 ROM to be
 	 customised (Stuart).
 20071205 menu_data.dat: fix Beta 128 ROM menu item name (Stuart).
+20071205 if1.c: add support for Interface 1 snapshots (Fred).
